--- a/frontend/src/stylesheets/Overview.css
+++ b/frontend/src/stylesheets/Overview.css
@@ -1,3 +1,6 @@
+body {
+}
+
 .module {
 	height: 50%;
 }
@@ -20,7 +23,7 @@
 }
 
 .instruction-icon {
-	color: rgba(255, 255, 255, 0.7);
+	color: #ffec67;
 }
 
 .instruction-icon:hover {
